--- a/index.html
+++ b/index.html
@@ -813,9 +813,9 @@
         </div>
       </div>
 <nav class="nav-links">
-  <a href="#about">About</a>
-  <a href="#skills">Skills</a>
-  <a href="#projects">Projects</a>
+<a href="#about" class="js-scroll" data-scroll-target="#about">About</a>
+<a href="#skills" class="js-scroll" data-scroll-target="#skills">Skills</a>
+<a href="#projects" class="js-scroll" data-scroll-target="#projects">Projects</a>
 </nav>
     </div>
   </header>
