--- a/index.html
+++ b/index.html
@@ -215,12 +215,12 @@
   margin-bottom: 32px;   /* เพิ่มระยะห่างรูปกับชื่อ */
 }
 
-    .hero-name {
-      font-size: clamp(2.2rem, 3vw, 2.8rem);
-      letter-spacing: 0.08em;
-      text-transform: uppercase;
-      margin: 12px 0 8px;
-    }
+.hero-name {
+  font-size: clamp(2.2rem, 3vw, 2.8rem);
+  letter-spacing: 0.04em;   /* ลด spacing นิดนึงให้ไม่ดูห่างเกิน */
+  text-transform: none;     /* หรือแค่ลบบรรทัด text-transform ไปเลย */
+  margin: 12px 0 8px;
+}
 
     .hero-role {
       margin: 0;
